add marcação de versionamento

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <p>isso se trata apenas de uma página para teste de versionamento de código utilizando o GIT</p>
+    <p>veresão 0.001</p>
 </body>
 </html>
